REFACTOR: Setting Angular architecture

--- a/webApp/src/app/home/home.component.html
+++ b/webApp/src/app/home/home.component.html
@@ -16,7 +16,7 @@
 
     <mat-card
       *ngFor="let item of favoriteSchools"
-      (click)="goToDetailPage(item.id)"
+      (click)="goToDetailPage(item)"
     >
       <app-school-item [item]="item" [h2]="true"></app-school-item>
     </mat-card>
