--- a/webApp/src/app/home/pages/search-page/search-page.component.html
+++ b/webApp/src/app/home/pages/search-page/search-page.component.html
@@ -7,7 +7,7 @@
   <mat-toolbar> Escolas encontradas </mat-toolbar>
   <div class="Cards">
     <app-empty-list *ngIf="schools.length == 0" [busca]="true"></app-empty-list>
-    <mat-card *ngFor="let item of schools" (click)="goToDetailPage(item.id)">
+    <mat-card *ngFor="let item of schools" (click)="goToDetailPage(item)">
       <app-school-item [item]="item" [cod]="true" [h1]="true"></app-school-item>
     </mat-card>
   </div>
