FIX: subtille position and mat-icon size

--- a/webApp/src/app/home/components/school-item/school-item.component.scss
+++ b/webApp/src/app/home/components/school-item/school-item.component.scss
@@ -10,6 +10,8 @@
     color: red;
     font-size: 3.8em;
     top: 0.8em;
+    width: auto;
+    height: auto;
   }
   button {
     background-color: transparent;
