--- a/webApp/src/app/shared/components/search-form/search-form.component.html
+++ b/webApp/src/app/shared/components/search-form/search-form.component.html
@@ -6,7 +6,7 @@
       (keyup)="searchBounce()"
       formControlName="request"
       type="search"
-      placeholder="Digite nome da escola ou cód. Ine"
+      placeholder="Digite nome da escola ou código inep"
     />
   </div>
   <button mat-raised-button color="primary" type="submit">Buscar</button>
