--- a/webApp/src/app/home/pages/detail-page/detail-page.component.scss
+++ b/webApp/src/app/home/pages/detail-page/detail-page.component.scss
@@ -7,18 +7,20 @@ mat-card {
   max-width: 60em;
   height: calc(100% - 200px);
   min-height: 500px;
-  background-image: url(../../assets/background.png);
+  background-image: url(../../../../assets/background.png);
   button {
     color: red;
     background-color: transparent;
     border: none;
   }
   mat-card-subtitle {
-    position: fixed;
+    position: relative;
     left: 15em;
     top: 10em;
   }
   mat-icon {
+    width: auto;
+    height: auto;
     position: fixed;
     font-size: xx-large;
   }
@@ -47,6 +49,8 @@ mat-card {
   box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
     0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
   mat-icon {
+    height: auto;
+    width: auto;
     position: fixed;
     right: 1em;
     font-size: xx-large;
