--- a/webApp/src/app/home/home.component.scss
+++ b/webApp/src/app/home/home.component.scss
@@ -6,6 +6,8 @@
   box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
     0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
   mat-icon {
+    width: auto;
+    height: auto;
     position: fixed;
     right: 1em;
     font-size: xx-large;
